--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -28,3 +28,10 @@ jobs:
     # Runs a single command using the runners shell
     - name: Send greeting
       run: echo "Hello ${{ github.event.inputs.name }}"
+    - name: Checkout code
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+    - name: Checking status
+      run: git status
+    - name: Branch
+      run: git branch
